fix: remove navbar height making dropdwon menu not showing
Authored-by: Jhonatan Martinez

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -157,7 +157,6 @@
 
 .navbar {
     background-color: var(--bs-white);
-    height: 6.5rem;
 }
 
 .navbar .span-as-title {
